Desacopla el dominio Price del Repositorio, Actualiza build.gradle, test